--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=E-stop
-spring.datasource.url=jdbc:postgresql://localhost:5432/eshop_db
-spring.datasource.username=your_user
-spring.datasource.password=your_password
+spring.datasource.url=jdbc:postgresql://localhost:5433/E-stop
+spring.datasource.username=postgres
+spring.datasource.password=java-junior-programator27
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update # create, create-drop, update, validate, none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
