--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# --- Database config ---
 spring.application.name=E-stop
 spring.datasource.url=jdbc:postgresql://localhost:5433/E-stop
 spring.datasource.username=postgres
@@ -18,3 +19,26 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 # Od koho se e-maily posílají
 app.mail.from=noreply@secondel.cz
+
+# --- HikariCP specific ---
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.pool-name=BednovacHikariPool
+
+# Optional - lep?í logování
+logging.level.com.zaxxer.hikari=INFO
+
+# --- Cache config ---
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
+
+# --- JWT config ---
+jwt.secret=!NjMcLFCUT0W@fnznEoz!9kRcMhihoFM
+jwt.access-token-expiration-ms=3600000    # 1 hodina
+jwt.refresh-token-expiration-ms=86400000  # 24 hodin
+
+# URL frontend? povolených pro CORS
+app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
