--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,12 +12,12 @@ management.endpoints.web.exposure.include=health,info
 # SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tv?j.email@gmail.com
+spring.mail.username=tvuj.email@gmail.com
 spring.mail.password=aplikacni-heslo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Od koho se e-maily posílají
+# Od koho se e-maily posilaji
 app.mail.from=noreply@secondel.cz
 
 # --- HikariCP specific ---
@@ -28,7 +28,7 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.pool-name=BednovacHikariPool
 
-# Optional - lep?í logování
+# Optional - logging for HikariCP
 logging.level.com.zaxxer.hikari=INFO
 
 # --- Cache config ---
@@ -40,5 +40,5 @@ jwt.secret=!NjMcLFCUT0W@fnznEoz!9kRcMhihoFM
 jwt.access-token-expiration-ms=3600000    # 1 hodina
 jwt.refresh-token-expiration-ms=86400000  # 24 hodin
 
-# URL frontend? povolených pro CORS
+# URL frontend povolenych pro CORS
 app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
