--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,10 @@ spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
 
 # --- JWT config ---
 jwt.secret=!NjMcLFCUT0W@fnznEoz!9kRcMhihoFM
-jwt.access-token-expiration-ms=3600000    # 1 hodina
-jwt.refresh-token-expiration-ms=86400000  # 24 hodin
+# 1 hodina
+jwt.access-token-expiration-ms=3600000
+# 24 hodin
+jwt.refresh-token-expiration-ms=86400000
 
 # URL frontend povolenych pro CORS
 app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
