--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=java-junior-programator27
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 management.endpoints.web.exposure.include=health,info
@@ -26,7 +27,7 @@ spring.datasource.hikari.minimum-idle=3
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=10000
-spring.datasource.hikari.pool-name=BednovacHikariPool
+spring.datasource.hikari.pool-name=EshopHikariPool
 
 # Optional - logging for HikariCP
 logging.level.com.zaxxer.hikari=INFO
