--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ management.endpoints.web.exposure.include=health,info
 # SMTP Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tvuj.email@gmail.com
+spring.mail.username=farm140warrior@gmail.com
 spring.mail.password=aplikacni-heslo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
