Formulář pro vložení inzerátu(ADMIN)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,6 @@ jwt.refresh-token-expiration-ms=86400000
 
 # URL frontend povolenych pro CORS
 app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
+
+
+app.upload.dir=uploads
