--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,5 +46,20 @@ jwt.refresh-token-expiration-ms=86400000
 # URL frontend povolenych pro CORS
 app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
 
-
+app.frontend.url=http://localhost:5173
 app.upload.dir=uploads
+app.upload.max-file-size=5242880
+app.upload.max-request-size=20971520
+
+# --- Swagger config ---
+springdoc.api-docs.path=/api/v1/api-docs
+springdoc.swagger-ui.path=/api/v1/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+springdoc.swagger-ui.displayRequestDuration=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.deepLinking=true
+springdoc.swagger-ui.persistAuthorization=true
+
+
