--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,4 +62,6 @@ springdoc.swagger-ui.filter=true
 springdoc.swagger-ui.deepLinking=true
 springdoc.swagger-ui.persistAuthorization=true
 
+logging.level.org.springframework.security=DEBUG
+
 
