--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,6 +47,8 @@ jwt.refresh-token-expiration-ms=86400000
 app.cors.allowed-origins=http://localhost:5173,http://localhost:5174
 
 app.frontend.url=http://localhost:5173
+app.backend.url=http://localhost:8080
+app.upload.url=/uploads/
 app.upload.dir=uploads
 app.upload.max-file-size=5242880
 app.upload.max-request-size=20971520
