--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,8 +54,8 @@ app.upload.max-file-size=5242880
 app.upload.max-request-size=20971520
 
 # --- Swagger config ---
-springdoc.api-docs.path=/api/v1/api-docs
-springdoc.swagger-ui.path=/api/v1/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.swagger-ui.defaultModelsExpandDepth=-1
